--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 *.userosscache
 *.sln.docstates
 
+# General VAGRANT folder ignore
+.vagrant/
+
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
